unpackaged/main/default/objects/Asset__c/Asset__c.object-meta.xml
<CustomObject>
    <label>Asset</label>
    <nameField>
        <displayFormat>APA-{0000}</displayFormat>
        <label>Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>