unpackaged/main/default/objects/Asset__c/fields/AssessedValue__c.field-meta.xml
<CustomField>
    <fullName>AssessedValue__c</fullName>
    <label>Assessed Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>