unpackaged/main/default/objects/Asset__c/fields/BasiqValue__c.field-meta.xml
<CustomField>
    <fullName>BasiqValue__c</fullName>
    <label>BasiqValue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>