unpackaged/main/default/objects/Asset__c/fields/ExpectedMonthlyRentalIncome__c.field-meta.xml
<CustomField>
    <fullName>ExpectedMonthlyRentalIncome__c</fullName>
    <label>Expected Monthly Rental Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>