unpackaged/main/default/objects/Asset__c/fields/RealEstateStatus__c.field-meta.xml
<CustomField>
    <fullName>RealEstateStatus__c</fullName>
    <label>Real Estate Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Pending Sale</fullName>
            </value>
            <value>
                <fullName>Retained</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>