unpackaged/main/default/objects/Asset__c/fields/Rentalincome__c.field-meta.xml
<CustomField>
    <fullName>Rentalincome__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rental income?</label>
    <type>Checkbox</type>
</CustomField>