unpackaged/main/default/objects/Asset__c/fields/RentalIncomeAmount__c.field-meta.xml
<CustomField>
    <fullName>RentalIncomeAmount__c</fullName>
    <label>Rental Income Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>