unpackaged/main/default/objects/Asset__c/fields/RentalIncomeFrequency__c.field-meta.xml
<CustomField>
    <fullName>RentalIncomeFrequency__c</fullName>
    <label>Rental Income Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>