unpackaged/main/default/objects/Asset__c/fields/StreetName__c.field-meta.xml
<CustomField>
    <fullName>StreetName__c</fullName>
    <label>Street Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>