unpackaged/main/default/objects/Asset__c/fields/StreetType__c.field-meta.xml
<CustomField>
    <fullName>StreetType__c</fullName>
    <label>Street Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>