unpackaged/main/default/objects/Asset__c/fields/UnitNumber__c.field-meta.xml
<CustomField>
    <fullName>UnitNumber__c</fullName>
    <label>Unit Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>